--- a/login/app/dashboard_cliente.html
+++ b/login/app/dashboard_cliente.html
@@ -14,7 +14,7 @@
   <!-- ======= HEADER ======= -->
   <header class="main-header">
     <nav class="navbar container d-flex justify-content-between align-items-center py-3">
-      <a class="navbar-brand" href="../index.html">Mi Proyecto</a>
+      <a class="navbar-brand" href="../index.html">SegurAR</a>
       <ul class="nav list-unstyled d-flex gap-3 m-0">
         <li><a id="linkInicio" href="#">Inicio</a></li>
         <li><a href="./logout.html" class="text-danger">Cerrar sesión</a></li>
